--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,13 @@
 {
-    "printWidth": 80,
+    "jsxSingleQuote": true,
+    "singleQuote": true,
+    "semi": true,
     "tabWidth": 2,
-    "singleQuote": true
-}
+    "trailingComma": "none",
+    "printWidth": 100,
+    "bracketSameLine": false,
+    "useTabs": false,
+    "arrowParens": "always",
+    "endOfLine": "auto"
+  }
+  
