--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/lato": "^5.0.9",
+    "@fontsource/open-sans": "^5.0.9",
     "@reduxjs/toolkit": "^1.9.5",
     "framer-motion": "^10.16.1",
     "react": "^18.2.0",
