code: update imports settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,11 @@
     "paths": {
       "@/*": ["./src/*"],
       "@/public/*": ["./public/*"]
-    }
+    },
+
+    /* Imports */
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
