--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "flag-icons": "^6.11.0",
     "framer-motion": "^10.16.1",
     "react": "^18.2.0",
+    "react-cool-portal": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-slick": "^0.29.0",
+    "usehooks-ts": "^2.9.1",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
