--- a/package.json
+++ b/package.json
@@ -21,20 +21,25 @@
     "@fontsource/lato": "^5.0.9",
     "@fontsource/open-sans": "^5.0.9",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-redux": "^7.1.26",
     "flag-icons": "^6.11.0",
     "framer-motion": "^10.16.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-cool-portal": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-slick": "^0.29.0",
+    "redux-persist": "^6.0.0",
     "usehooks-ts": "^2.9.1",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-slick": "^0.23.10",
