--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-cool-portal": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-otp-input": "^3.0.4",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.15.0",
