--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.26",
     "flag-icons": "^6.11.0",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-cool-portal": "^1.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
@@ -36,7 +38,8 @@
     "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
     "usehooks-ts": "^2.9.1",
-    "vite-plugin-svgr": "^3.2.0"
+    "vite-plugin-svgr": "^3.2.0",
+    "yup": "^1.3.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
