--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.26",
     "flag-icons": "^6.11.0",
-    "formik": "^2.4.5",
+    "formik": "^2.2.9",
     "framer-motion": "^10.16.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
@@ -38,6 +38,7 @@
     "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
     "usehooks-ts": "^2.9.1",
+    "uuid": "^9.0.1",
     "vite-plugin-svgr": "^3.2.0",
     "yup": "^1.3.0"
   },
@@ -46,6 +47,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-slick": "^0.23.10",
+    "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
