--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,18 +19,19 @@
 variables:
   
   SSH_PRIVATE_KEY: "$ncleaques"
-  SSH_HOST: "54.167.254.250"          # Replace with your VPC server's IP address or hostname
+  SSH_HOST: "$HOST"          # Replace with your VPC server's IP address or hostname
   SSH_PORT: "22"                      # SSH port (default is 22)
   SSH_USER: "ubuntu"       # SSH username on the VPC server
-  TARGET_DIRECTORY: "/home/webuser/website/cleaques/development/public_html/"  # The directory where you want to transfer files
+  TARGET_DIRECTORY: "$main_dir"  # The directory where you want to transfer files
 
 
 deploy-job:      # This job runs in the deploy stage.
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
   environment: development
   script:
-                #- mkdir -p ~/.ssh
-                #- echo "$ncleaques" > ~/.ssh/id_rsa  # Add your SSH private key
-                #- chmod 600 ~/.ssh/id_rsa  # Set correct permissions
-                #- ssh-keyscan $SSH_HOST >> ~/.ssh/known_hosts  # Add the server to known_hosts
-    - scp -r * $SSH_USER@$SSH_HOST:$TARGET_DIRECTORY
+    - mkdir -p ~/.ssh
+    - echo "$ncleaques" > ~/.ssh/gitlab_rsa  
+    - chmod 600 ~/.ssh/gitlab_rsa   
+    - scp -i * $SSH_USER@$SSH_HOST:$TARGET_DIRECTORY
+  only:
+    - master
