Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,4 +32,4 @@ deploy-job:      # This job runs in the deploy stage.
     - mkdir -p ~/.ssh
     - echo "$ncleaques" > ~/.ssh/gitlab_rsa  
     - chmod 600 ~/.ssh/gitlab_rsa   
-    - scp -i * $SSH_USER@$SSH_HOST:$TARGET_DIRECTORY
+    - scp -i ~/.ssh/gitlab_rsa -r * $SSH_USER@$SSH_HOST:$TARGET_DIRECTORY
