--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,5 +34,9 @@ deploy-job:      # This job runs in the deploy stage.
     #- chmod 600 ~/.ssh/gitlab_rsa   
     #- ssh-keyscan -H $SSH_HOST > ~/.ssh/known_hosts
   script:
-    - #ssh $SSH_USER@$SSH_HOST "cd $TARGET_DIRECTORY && git checkout main && git pull && exit"                                                
+    - mkdir -p ~/.ssh
+    - echo "$SSH_PRIVATE_KEY" > ~/.ssh/gitlab_rsa  
+    - chmod 600 ~/.ssh/gitlab_rsa   
+    - ssh-keyscan -H $SSH_HOST > ~/.ssh/known_hosts
     - ssh -i $SSH_PRIVATE_KEY $SSH_USER@$SSH_HOST "cd $TARGET_DIRECTORY && git checkout main && git pull && exit"                                                
+    #ssh $SSH_USER@$SSH_HOST "cd $TARGET_DIRECTORY && git checkout main && git pull && exit"                                                
