Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,6 @@ deploy-job:      # This job runs in the deploy stage.
     - echo "$SSH_PRIVATE_KEY" > ~/.ssh/gitlab_rsa  
     - chmod 600 ~/.ssh/gitlab_rsa   
     - ssh-keyscan -H $SSH_HOST > ~/.ssh/known_hosts
-    #ssh -i $SSH_PRIVATE_KEy $SSH_USER@$SSH_HOST "cd $TARGET_DIRECTORY && git checkout main && git pull && exit"   
-    - scp -i ~/.ssh/gitlab_rsa -r main $SSH_USER@$SSH_HOST:$TARGET_DIRECTORY                                             
-    # ssh $SSH_USER@$SSH_HOST "cd $TARGET_DIRECTORY && git checkout main && git pull && exit"                                                
+    - ssh -i $SSH_PRIVATE_KEy $SSH_USER@$SSH_HOST "cd $TARGET_DIRECTORY && git checkout main && git pull && exit"   
+    #- scp -i ~/.ssh/gitlab_rsa -r main $SSH_USER@$SSH_HOST:$TARGET_DIRECTORY                                             
+    #- ssh $SSH_USER@$SSH_HOST "cd $TARGET_DIRECTORY && git checkout main && git pull && exit"                                                
