Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,9 +33,9 @@ deploy-job:      # This job runs in the deploy stage.
     #- ssh-keyscan -H $SSH_HOST > ~/.ssh/known_hosts
   script:
     
-    - echo "$SSH_PRIVATE_KEY" > ~/.ssh/gitlab_rsa  
-    - chmod 600 ~/.ssh/gitlab_rsa   
-    - ssh-keyscan -H $SSH_HOST > ~/.ssh/known_hosts
+    #- echo "$SSH_PRIVATE_KEY" > ~/.ssh/gitlab_rsa  
+    #- chmod 600 ~/.ssh/gitlab_rsa   
+    #- ssh-keyscan -H $SSH_HOST > ~/.ssh/known_hosts
     - ssh -i $SSH_PRIVATE_KEy $SSH_USER@$SSH_HOST "cd $TARGET_DIRECTORY && git checkout main && git pull && exit"   
     #- scp -i ~/.ssh/gitlab_rsa -r main $SSH_USER@$SSH_HOST:$TARGET_DIRECTORY                                             
     #- ssh $SSH_USER@$SSH_HOST "cd $TARGET_DIRECTORY && git checkout main && git pull && exit"                                                
