--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router-dom": "^6.15.0",
     "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.1",
     "vite-plugin-svgr": "^3.2.0",
